<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.tomgibara.bits</groupId>
  <artifactId>bits</artifactId>
  <version>2.1.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  
  <parent>
    <groupId>com.tomgibara</groupId>
    <artifactId>github</artifactId>
    <version>1.0.0</version>
  </parent>

  <name>Bits</name>
  <description>A library for reading, writing and manipulating bits.</description>
  <inceptionYear>2007</inceptionYear>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.tomgibara.fundament</groupId>
      <artifactId>fundament</artifactId>
      <version>1.1.1</version>
    </dependency>
    <dependency>
      <groupId>com.tomgibara.hashing</groupId>
      <artifactId>hashing</artifactId>
      <version>2.1.0</version>
    </dependency>
  </dependencies>

</project>
